# spark-mcp-tui

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: SPARK_MCP_PRD.md  architecture.md  claude-code-setup.md  configuration.md  error-codes.md  installation.md  security.md
examples/: claude_code_mcp_http.json  claude_code_mcp_stdio.json  claude_desktop_config.json  config.toml  docker-compose.yml  env.example
spark-mcp/: README.md  pyproject.toml
spark-mcp/src/spark_mcp/: __init__.py  __main__.py  cli.py  cluster.py  config.py  models.py  operations.py  recipes.py  server.py  vllm_docker.py
spark-mcp/src/spark_mcp/templates/: config.toml  env.template  systemd.service.template
spark-mcp/tests/: conftest.py
spark-mcp/tests/fixtures/: mock_ssh_responses.yaml
spark-mcp/tests/fixtures/sample_recipes/: gemma4-26b-a4b.yaml  invalid_missing_model.yaml  qwen3-cluster.yaml
spark-mcp/tests/integration/: conftest.py  test_cluster.py
spark-mcp/tests/unit/: test_cluster_pool.py  test_config.py  test_models.py  test_operations.py  test_recipes.py  test_server_auth.py  test_server_tools.py  test_vllm_docker.py
spark-skills/: README.md  install.sh
spark-skills/skills/choosing-models-for-dgx-spark/: SKILL.md
spark-skills/skills/choosing-models-for-dgx-spark/reference/: memory_calculations.md  performance_expectations.md  quantization_guide.md
spark-skills/skills/creating-vllm-recipes/: SKILL.md  TESTING.md
spark-skills/skills/creating-vllm-recipes/examples/: gemma_with_reasoning.yaml  glm_with_tool_calling.yaml  qwen_vision_language.yaml
spark-skills/skills/creating-vllm-recipes/templates/: cluster_tp2.yaml  cluster_tp4.yaml  fp8_native.yaml  moe_awq.yaml  nvfp4.yaml  solo_single_gpu.yaml
spark-skills/skills/troubleshooting-dgx-spark-vllm/: SKILL.md
spark-skills/skills/troubleshooting-dgx-spark-vllm/known_issues/: flashinfer_compat.md  nccl_timeout.md  oom_patterns.md  ray_init_failure.md  sm121_fp8_crash.md
spark-tui/: README.md  pyproject.toml
spark-tui/src/spark_tui/: __init__.py  __main__.py  app.py  config.py  mcp_client.py
